k8s/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: web-template
  labels:
    app.kubernetes.io/component: namespace
