k8s/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: backend
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app.kubernetes.io/name: backend
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      protocol: TCP
  selector:
    app.kubernetes.io/name: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      protocol: TCP
  selector:
    app.kubernetes.io/name: redis
