k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-template-ingress
spec:
  rules:
    - host: "$(SITE_ADDRESS)"
      http:
        paths:
          - pathType: Prefix
            path: "/backend/*"
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 3000
